--- a/instruments.yaml
+++ b/instruments.yaml
@@ -7,19 +7,19 @@
   - ztfg
   =id: CFH12k
 
-- name: OMR Low Resolution Spectrograph
+- name: BFOSC 
   type: spectrograph
   band: optical
-  telescope_id: =Xinglong-2.16
+  telescope_id: =Xinglong-2.16m
   filters: []
-  =id: OMR Low Resolution Spectrograph
-
-- name: HRS
+  =id: BFOSC 
+  
+- name: YFOSC
   type: spectrograph
   band: optical
-  telescope_id: =Xinglong-2.16
-  filters: []
-  =id: HRS
+  telescope_id: =GMG-2.4m
+  filters:[]
+  =id: GMG-2.4m
 
 - name: Spectrograph Canberra
   type: spectrograph
@@ -45,23 +45,27 @@
   - ztfr
   =id: MMATest
 
-- name: FLI Microline 16803
+#groupeKNC
+- name: iT8-Microline16803
   type: imager
   band: Optical
   telescope_id: =iT8
-  filters: []
-  =id: FLI Microline 16803
+  filters: ps1::open
+  =id: iT8-Microline16803
 
-- name: FLI Proline 16803
+#groupeKNC
+- name: iT32-Proline16803
   type: imager
   band: Optical
   telescope_id: =iT32
   filters:
   - bessellv
   - besselli
-  =id: FLI Proline 16803
-
-- name: FLI ProLine PL11002M CCD camera
+  - ps1::open
+  =id: iT32-Proline16803
+  
+#groupeKNC
+- name: iT11-PL11002M
   type: imager
   band: Optical
   telescope_id: =iT11
@@ -71,9 +75,11 @@
   - bessellr
   - besselli
   - bessellux
-  =id: FLI ProLine PL11002M CCD camera
+  - ps1::open
+  =id: iT11-PL11002M
 
-- name: FLI-PL6303E  CCD camera
+#groupeKNC
+- name: iT21-PL6303E
   type: imager
   band: Optical
   telescope_id: =iT21
@@ -83,9 +89,10 @@
   - bessellr
   - besselli
   - bessellux
-  =id: FLI-PL6303E  CCD camera
-
-- name: FLI-PL09000  CCD camera
+  - ps1::open
+  =id: iT21-PL6303E
+#groupeKNC
+- name: iT31-PL09000
   type: imager
   band: Optical
   telescope_id: =iT31
@@ -93,9 +100,10 @@
   - bessellv
   - bessellr
   - besselli
-  =id: FLI-PL09000  CCD camera
-
-- name: FLI-PL6303E
+  - ps1::open
+  =id: iT31-PL09000
+#groupeKNC
+- name: iT30-PL6303E
   type: imager
   band: Optical
   telescope_id: =iT30
@@ -105,12 +113,13 @@
   - bessellr
   - besselli
   - bessellux
-  =id: FLI-PL6303E
-
-- name: 'FLI ProLine PL4710 '
+  - ps1::open
+  =id: iT30-PL6303E
+#groupeKNC
+- name: iT17-PL4710
   type: imager
   band: Optical
-  telescope_id: =iT17
+  telescope_id: =KNC-iT17
   filters:
   - sdssg
   - sdssr
@@ -121,7 +130,8 @@
   - bessellr
   - besselli
   - bessellux
-  =id: FLI ProLine PL4710
+  - ps1::open
+  =id: iT17-PL4710
 
 - name: ATLAS
   type: imager
@@ -137,9 +147,10 @@
   band: ir
   telescope_id: =CFHT
   filters:
-  - 2massj
-  - 2massh
-  - 2massks
+  - sdssg
+  - sdssr
+  - sdssi
+  - sdssz
   =id: CFHT/MEGACAM
 
 - name: CFHT/WIRCAM
@@ -152,23 +163,227 @@
   - 2massks
   =id: CFHT/WIRCAM
 
-- name: Abastumani-T70
+- name: AbAO-T70
   type: imager
   band: optical
-  telescope_id: =Abastumani-T70
+  telescope_id: =AbAO-T70
   filters:
   - standard::b
   - standard::v
   - standard::r
   - standard::i
-  =id: Abastumani-T70
+  =id: AbAO-T70
+  
+- name: Shao-T60
+  type: imager
+  band: optical
+  telescope_id: =Shao-T60
+  filters: 
+  - standard::b
+  - standard::v
+  - standard::r
+  - standard::i
+  - bessellb
+  - bessellv
+  - bessellr
+  - besselli
+  - bessellux
+  - ps1::open
+  =id: Shao-T60
+  
+- name: Lisnyky/AZT-8
+  type: imager
+  band: optical
+  telescope_id: =Lisnyky/AZT-8
+  filters: 
+  - bessellb
+  - bessellv
+  - bessellr
+  - besselli
+  - bessellux
+  - ps1::open
+  =id: Lisnyky/AZT-8
+  
+- name: Lisnyky/Schmidt
+  type: imager
+  band: optical
+  telescope_id: =Lisnyky/Schmidt
+  filters: 
+  - bessellb
+  - bessellv
+  - bessellr
+  - besselli
+  - bessellux
+  - ps1::open
+  =id: Lisnyky/Schmidt
+  
+ - name: OST-CDK
+  type: imager
+  band: optical
+  telescope_id: =OST-CDK
+  filters: 
+  - bessellb
+  - bessellv
+  - bessellr
+  - besselli
+  - bessellux
+  - ps1::open
+  =id: OST-CDK
 
-- name: Xinglong-2.16
+- name: KAO
+  type: imager
+  band: optical
+  telescope_id: =KAO
+  filters: 
+  - sdssg
+  - sdssr
+  - sdssi
+  - sdssz
+  - ps1::open
+  =id: KAO
+  
+- name: C2PU/Omicron
+  type: imager
+  band: optical
+  telescope_id: =C2PU/Omicron
+  filters: 
+  - sdssg
+  - sdssr
+  - sdssi
+  - sdssz
+  - ps1::open
+  =id: C2PU/Omicron
+  
+- name: PicduMidi/T1M
+  type: imager
+  band: optical
+  telescope_id: =PicduMidi/T1M
+  filters: 
+  - sdssg
+  - sdssr
+  - sdssi
+  - sdssz
+  - ps1::open
+  =id: PicduMidi/T1M
+  
+ - name: IRIS
+  type: imager
+  band: optical
+  telescope_id: =IRIS
+  filters: 
+  - sdssg
+  - sdssr
+  - sdssi
+  - sdssz
+  - ps1::open
+  =id: IRIS
+  
+ - name: OAJ/T80
+  type: imager
+  band: optical
+  telescope_id: =OAJ/T80
+  filters: 
+  - sdssr
+  - ps1::open
+  =id: OAJ/T80
+  
+ - name: OSN/T150 
+  type: imager
+  band: optical
+  telescope_id: =OSN/T150 
+  filters: 
+  - bessellb
+  - bessellv
+  - bessellr
+  - besselli
+  - bessellux
+  - ps1::open
+  =id: OAJ/T80
+  
+ - name: OWL
+  type: imager
+  band: optical
+  telescope_id: =OWL
+  filters: 
+  - bessellb
+  - bessellv
+  - bessellr
+  - besselli
+  - bessellux
+  - ps1::open
+  =id: OWL
+  
+ - name: MOSS
+  type: imager
+  band: optical
+  telescope_id: =MOSS
+  filters: 
+  - ps1::open
+  =id: MOSS
+ 
+ - name: HAO
+  type: imager
+  band: optical
+  telescope_id: =HAO
+  filters: 
+  - ps1::open
+  - bessellb
+  - bessellv
+  - bessellr
+  - besselli
+  =id: HAO
+  
+ - name: OPD/60cm
+  type: imager
+  band: optical
+  telescope_id: =OPD/60cm
+  filters: 
+  - ps1::open
+  - 2massj
+  - 2massh
+  =id: OPD/60cm
+  
+ - name: OPD/1.6m
+  type: imager
+  band: optical
+  telescope_id: =OPD/1.6m
+  filters: 
+  - ps1::open
+  - bessellb
+  - bessellv
+  - bessellr
+  - besselli
+  - bessellux
+  =id: OPD/1.6m
+  
+ - name: SOAR/Spartan
+  type: imager
+  band: optical
+  telescope_id: =OPD/Spartan
+  filters: 
+  - ps1::open
+  - ps1::open
+  - 2massj
+  - 2massh
+  - sdssg
+  - sdssr
+  - sdssi
+  - sdssz
+  =id: SOAR/Spartan
+  
+- name: Xinglong-2.16m
   type: imaging spectrograph
   band: optical
-  telescope_id: =Xinglong-2.16
+  telescope_id: =Xinglong-2.16m
   filters:
   - sdssg
+  - sdssr
+  - sdssi
+  - sdssz
+  - bessellb
+  - bessellv
+  - bessellr
+  - besselli
   =id: Xinglong-2.16
 
 - name: Xinglong-TNT
@@ -177,14 +392,28 @@
   telescope_id: =Xinglong-TNT
   filters:
   - sdssg
+  - sdssr
+  - sdssi
+  - sdssz
+  - bessellb
+  - bessellv
+  - bessellr
+  - besselli
   =id: Xinglong-TNT
 
-- name: GMG-2.4
-  type: imaging spectrograph
+- name: GMG-2.4m
+  type: imaging
   band: optical
-  telescope_id: =GMG-2.4
+  telescope_id: =GMG-2.4m
   filters:
   - sdssg
+  - sdssr
+  - sdssi
+  - sdssz
+  - bessellb
+  - bessellv
+  - bessellr
+  - besselli
   =id: GMG-2.4
 
 - name: FRAM-Auger
@@ -195,6 +424,11 @@
   - bessellb
   - bessellv
   - bessellr
+  - sdssg
+  - sdssr
+  - sdssi
+  - sdssz
+  - ps1::open
   =id: FRAM-Auger
 
 - name: FRAM-CTA-N
@@ -206,6 +440,7 @@
   - bessellv
   - bessellr
   - sdssz
+  - ps1::open
   =id: FRAM-CTA-N
 
 - name: SNOVA
@@ -215,6 +450,9 @@
   filters:
   - bessellux
   - bessellb
+  - bessellv
+  - bessellr
+  - ps1::open
   =id: SNOVA
 
 - name: GTC/OSIRIS
@@ -229,17 +467,20 @@
   - sdssz
   =id: GTC/OSIRIS
 
-- name: Abastumani-T48
+- name: AbAO-T48
   type: imager
   band: optical
-  telescope_id: =Abastumani-T48
+  telescope_id: =AbAO-T48
   filters:
   - standard::b
   - standard::v
   - standard::r
   - standard::i
   - standard::u
-  =id: Abastumani-T48
+  - bessellb
+  - bessellv
+  - bessellr
+  =id: AbAO-T48
 
 - name: TRT-GAO
   type: imager
@@ -277,7 +518,7 @@
   - bessellv
   =id: TRT-SBO
 
-- name: 2.2m CAHA/CAFOS
+- name: CAFOS
   type: imaging spectrograph
   band: optical
   telescope_id: =CAHA-CAFOS
@@ -290,7 +531,7 @@
   - bessellv
   - bessellr
   - besselli
-  =id: 2.2m CAHA/CAFOS
+  =id: CAHA/CAFOS
 
 - name: TAROT/TRE
   type: imager
@@ -310,6 +551,78 @@
   - sdssi
   - ps1::open
   =id: TAROT/TCA
+  
+- name: BJP/ALi-50
+  type: imager
+  band: optical
+  telescope_id: =BJP/ALi-50
+  filters:
+  - sdssg
+  - sdssr
+  - sdssi
+  - ps1::open
+  =id: BJP/ALi-50
+  
+ - name: UBAI/NT-60 
+  type: imager
+  band: optical
+  telescope_id: =UBAI/NT-60 
+  filters:
+  - bessellb
+  - besselli
+  - bessellr
+  - bessellux
+  - bessellv
+  - ps1::open
+  =id: UBAI/NT-60 
+  
+ - name: UBAI/ST-60 
+  type: imager
+  band: optical
+  telescope_id: =UBAI/ST-60 
+  filters:
+  - bessellb
+  - besselli
+  - bessellr
+  - bessellux
+  - bessellv
+  - ps1::open
+  =id: UBAI/ST-60 
+  
+ - name: UBAI/AZT-22
+  type: imager
+  band: optical
+  telescope_id: =UBAI/AZT-22
+  filters:
+  - bessellb
+  - besselli
+  - bessellr
+  - bessellux
+  - bessellv
+  - ps1::open
+  =id: UBAI/AZT-22 
+  
+ - name: Les-Makes/T60
+  type: imager
+  band: optical
+  telescope_id: =Les-Makes/T60
+  filters:
+  - bessellr
+  - ps1::open
+  =id: Les-Makes/T60
+  
+- name: Terskol/Zeiss-600
+  type: imager
+  band: optical
+  telescope_id: =Terskol/Zeiss-600
+  filters:
+  - bessellb
+  - besselli
+  - bessellr
+  - bessellux
+  - bessellv
+  - ps1::open
+  =id: Terskol/Zeiss-600
 
 - name: TAROT/TCH
   type: imager
@@ -342,4 +655,5 @@
   - standard::r
   - standard::u
   - standard::v
+  - ps1::open
   =id: Generic Instrument
