--- a/instruments.yaml
+++ b/instruments.yaml
@@ -267,7 +267,7 @@
   - ps1::open
   =id: PicduMidi/T1M_Instrument
 
-- name: IRIS
+- name: OHP/IRIS
   type: imager
   band: optical
   telescope_id: =OHP/IRIS
@@ -363,9 +363,9 @@
   telescope_id: =SOAR/Spartan
   filters:
   - ps1::open
-  - ps1::open
   - 2massj
   - 2massh
+  - 2massks
   - sdssg
   - sdssr
   - sdssi
@@ -658,3 +658,63 @@
   - standard::v
   - ps1::open
   =id: Generic_Instrument
+
+- name: OHP/T120
+  type: imager
+  band: optical
+  telescope_id: =OHP/T120
+  filters:
+  - bessellb
+  - bessellv
+  - bessellr
+  - besselli
+  - ps1::open
+  =id: OHP/T120_Instrument
+
+- name: VIRT
+  type: imager
+  band: optical
+  telescope_id: =VIRT
+  filters:
+  - bessellb
+  - bessellv
+  - bessellr
+  - besselli
+  - bessellux
+  - ps1::open
+  =id: VIRT_Instrument
+
+- name: CAHA-3.5m
+  type: imager
+  band: optical
+  telescope_id: =CAHA-3.5m
+  filters:
+  - 2massj
+  - 2massh
+  - 2massks
+  =id: CAHA-3.5m_Instrument
+
+- name: TNO
+  type: imager
+  band: optical
+  telescope_id: =TNO
+  filters:
+  - sdssu
+  - sdssg
+  - sdssr
+  - sdssi
+  - sdssz
+  - ps1::open
+  =id: TNO_Instrument
+
+- name: Zadko
+  type: imager
+  band: optical
+  telescope_id: =Zadko
+  filters:
+  - sdssu
+  - sdssg
+  - sdssr
+  - sdssi
+  - ps1::open
+  =id: Zadko_Instrument
